# ai_text_analyzer

./: README.md  pyproject.toml  server.py
ai_text_analyzer/: __init__.py
ai_text_analyzer/analyzer/: __init__.py  core.py  prompts.py
ai_text_analyzer/cli/: args.py  main.py  renderer.py
ai_text_analyzer/models/: __init__.py
ai_text_analyzer/utils/: __init__.py  formatting.py  io.py
frontend/: index.html
tests/: test_formatting.py  test_models.py  test_prompts.py
